fix(home-style): rename background path

--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ body {
 
 #home {
     height: 100vh;
-    background: url(/images/background.png);
+    background: url(images/background.png);
     background-size: cover;
     background-position: 15% 5%;
     background-repeat: no-repeat cover;
