--- a/styles/home.css
+++ b/styles/home.css
@@ -19,7 +19,7 @@ body {
 
 #home {
     height: 100vh;
-    background: url(/images/background.png);
+    background: url(https://www.notion.so/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F6dd2bd10-7bbf-4801-8ad9-6d9c6bdc236d%2FGrupo_15.png?table=block&id=c34ce017-864d-42e0-91fc-ee7d6f65fb38&width=600&userId=&cache=v2);
     background-size: cover;
     background-position: 15% 5%;
     background-repeat: no-repeat cover;
